--- a/platformio.ini
+++ b/platformio.ini
@@ -33,3 +33,5 @@ lib_deps =
 	paulstoffregen/Time@^1.6.1
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.0.4
+    lib_deps =
+    bblanchon/ArduinoJson@^6.21.2
