--- a/platformio.ini
+++ b/platformio.ini
@@ -12,18 +12,17 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
-
 monitor_speed = 115200
 upload_speed = 115200
 build_flags = 
-    -DCORE_DEBUG_LEVEL=0
-    -Os
-    -ffunction-sections
-    -fdata-sections
-    -Wl,--gc-sections
-    -DARDUINOJSON_USE_LONG_LONG=0
-    -DARDUINOJSON_USE_DOUBLE=0
-    -DDISABLE_FILESYSTEM_FEATURES=1
+	-DCORE_DEBUG_LEVEL=0
+	-Os
+	-ffunction-sections
+	-fdata-sections
+	-Wl,--gc-sections
+	-DARDUINOJSON_USE_LONG_LONG=0
+	-DARDUINOJSON_USE_DOUBLE=0
+	-DDISABLE_FILESYSTEM_FEATURES=1
 lib_deps = 
 	fastled/FastLED@^3.10.1
 	https://github.com/mobizt/Firebase-ESP-Client
@@ -33,5 +32,5 @@ lib_deps =
 	paulstoffregen/Time@^1.6.1
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.0.4
-    lib_deps =
-    bblanchon/ArduinoJson@^6.21.2
+	bblanchon/ArduinoJson@^6.21.2
+	openenergymonitor/EmonLib@^1.1.0
